Fix line-height for hero text for improved readability

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 0 21px;
-  margin: 0 auto;
+  margin: 0 auto 100px;
 }
 
 .hero-container {
@@ -33,7 +33,7 @@
   max-width: 326px;
   font-weight: 400;
   font-size: 18px;
-  line-height: 1.55556;
+  line-height: 1.5;
   text-align: center;
   color: #22343d;
 }
@@ -44,6 +44,7 @@
   align-items: center;
   gap: 30px;
   margin-top: 32px;
+}
   
 
 .hero-btn-item {
